--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <header class="standard-header">
             <div class="header--left-part">
                 <div class="drawer-icon"><img src="SVGs/drawerIcon.svg" alt=""></div>
@@ -181,8 +181,7 @@
 
         </main>
 
-    </div>
-
+    </div> -->
 
     <script src="app.js"></script>
 </body>
