--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="https://components-assignment-neeraj.netlify.app/" class="home-btn">Home</a>
     <div class="container">
         <header class="standard-header">
             <div class="header--left-part">
